Taking a break, so pushing

--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,17 @@
     </properties>
     <name>Config Parser</name>
     <description>Parse Linux Kernel  kconfig into a JSON blob</description>
+    <dependencies>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
