--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>Config Parser</name>
-    <description>Parse Linux Kernel  kconfig into a JSON blob</description>
+    <description>Parse Linux Kernel  kconfig into an XML blob</description>
     <build>
         <plugins>
             <plugin>
